--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,8 @@ a:hover {
 /*------/ Space Padding /------*/
 
 .section-t8 {
-  padding-top: 8rem;
+  padding-top: 0;
+  margin-top: 0;
 }
 
 .section-t4 {
@@ -259,6 +260,9 @@ a:hover {
 
 .title-wrap {
   padding-bottom: 4rem;
+  margin-top: 70px;
+  text-align: center;
+  padding-bottom: 0;
 }
 
 .title-a {
@@ -866,7 +870,7 @@ a:hover {
 ======================================*/
 
 .intro {
-  height: 100vh;
+  height: 85vh;
   position: relative;
   color: #ffffff;
 }
@@ -896,7 +900,7 @@ a:hover {
 
 .intro .carousel-item-a {
   position: relative;
-  height: 100vh;
+  height: 80vh;
 }
 
 .intro .carousel-item-a.bg-image {
@@ -1029,6 +1033,57 @@ a:hover {
 /*======================================
 //--//-->   PROPERTY - CARD-A
 ======================================*/
+
+/* --flagship -- */
+
+.container .flag{
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 10px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.container .flag {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 0;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.brief-content-two .img-flag {
+  position: relative;
+  left: 90px;
+}
+
+#flag-img{
+    float: right;
+    width: 92%;
+    max-width: 100%;
+    height: auto;
+    border: 0;
+    -ms-interpolation-mode: bicubic;
+    vertical-align: middle;
+}
+
+.readmore {
+  text-transform: uppercase;
+  font-size: .9rem;
+  padding-right: 20px;
+  display: inline-block;
+  position: relative;
+  font-style: initial;
+}
+
+.brief-content-one {
+  position: relative;
+  width: 100%;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 0;
+}
+
 
 .card-overlay-a-content {
   transition: all .5s ease-in;
@@ -1289,9 +1344,39 @@ a:hover {
   margin-left: 40px;
 }
 
+
+/* ---- service hr ----- */
+
+.hr-service, .hr-flagship  {
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  border: 0;
+  border-top: 3px solid #008ed6;
+  width: 5rem;
+}
+
+.hr-endofservice {
+  margin-top: 4rem;
+  margin-bottom: 3rem;
+  border: 0;
+  border-top: 1px solid rgba(0,0,0,.1);
+  box-shadow: 1px 1px 2px #fafafa;
+}
+
+.hr-flagship {
+  float: left;
+}
+
+
 /*======================================
 //--//-->   SERVICES - CARD-C
 ======================================*/
+
+.services-row {
+  margin-top: 1rem;
+  padding-top: 2rem;
+}
+
 
 .card-box-c {
   position: relative;
@@ -1305,8 +1390,13 @@ a:hover {
   color: #008ed6;
 }
 
+.foo {
+  background-color: #fafafa;
+}
+
 .card-body-c {
   padding: .5rem .5rem 0 .5rem;
+  box-shadow: 1px 1px 6px#f2f2f2;
 }
 
 .card-footer-c {
